# proyecto-patrullaje

./: README.md
bt_patrol/: CMakeLists.txt  README.md  package.xml
bt_patrol/behaviour_tree_xml/: patrol.xml
bt_patrol/include/bt_patrol/: CheckVictim.hpp  GetWaypoint.hpp  IsEveryoneHere.hpp  Move.hpp  ReportVictim.hpp  ResetVictim.hpp  checkVictimReport.hpp
bt_patrol/launch/: nav_bt_launch.py
bt_patrol/src/: bt_patrol_main.cpp  nav_bt_main.cpp
bt_patrol/src/bt_patrol/: CheckReport.cpp  CheckVictim.cpp  GetWaypoint.cpp  IsEveryoneHere.cpp  Move.cpp  ReportVictim.cpp  ResetVictim.cpp  checkVictimReport.cpp
bt_patrol_project/: CMakeLists.txt  README.md  package.xml
bt_patrol_project/behaviour_tree_xml/: patrol.xml
bt_patrol_project/cmake/: FindZMQ.cmake
bt_patrol_project/config/: zones.yaml
bt_patrol_project/include/bt_patrol/: CheckReport.hpp  IsEveryoneHere.hpp  ReportVictim.hpp  checkVictimReport.hpp
bt_patrol_project/src/: bt_patrol_main.cpp
bt_patrol_project/src/bt_patrol/: ResetVictim.cpp  checkVictimReport.cpp
bt_patrullaje/: CMakeLists.txt  README.md  package.xml
bt_patrullaje/behaviour_tree_xml/: patrullaBT.xml
bt_patrullaje/include/bt_patrol/: checkVictimReport.hpp
bt_patrullaje/msg/: patrols.msg
bt_patrullaje/src/bt_patrol/: checkVictimReport.cpp
cambios/: CMakeLists.txt  package.xml
cambios/config/: zones.yaml  zones_sim.yaml
cambios/include/nav_bt/: CheckZone.hpp  RescueWaypoint.hpp
cambios/src/: nav_bt_main.cpp
cambios/src/nav_bt/: GetWaypoint.cpp
dds_server/: CMakeLists.txt  README.md  package.xml
dds_server/config/: superClientConfig.xml
dds_server/hooks/: env-hook.sh
dds_server/launch/: serverlaunch.py
dds_server/shell_scripts/: setupClient.sh  setupMultiRobotNetwork.sh  startDiscoveryServer.sh
dds_server/vpn/: wg0.conf
launch/: launch.py
navBT/: CMakeLists.txt
navBT/config/: zones_sim.yaml
navBT/include/nav_bt/: GetWaypoint.hpp  UpdateLocation.hpp
navBT/msg/: PatrolMessage.msg
navBT/src/nav_bt/: CheckZone.cpp  MoveInSection.cpp  UpdateLocation.cpp
nav_bt/: CMakeLists.txt  README.md  package.xml
nav_bt/behavior_tree_xml/: navigate.xml
nav_bt/config/: zones.yaml  zones_sim.yaml
nav_bt/include/nav_bt/: CheckZone.hpp  GetWaypoint.hpp  Move.hpp  UpdateLocation.hpp
nav_bt/include/nav_bt/ctrl_support/: BTActionNode.hpp
nav_bt/launch/: nav_bt_launch.py
nav_bt/src/nav_bt/: CheckZone.cpp  GetWaypoint.cpp  Move.cpp  RescueWaypoint.cpp  UpdateLocation.cpp
patrol_msgs/: CMakeLists.txt  package.xml
patrol_msgs/bt_patrol_project/: package.xml
patrol_msgs/bt_patrol_project/src/bt_patrol/: checkVictimReport.cpp
patrol_msgs/msg/: PatrolMsgs.msg
proyecto/: CMakeLists.txt  README.md  package.xml
proyecto/config/: params.yaml  zones.yaml
proyecto/include/proyecto/: KobukiPatroller.hpp
proyecto/src/proyecto/: KobukiPatroller.cpp
src/: kobuki_patroller_main.cpp
yoloddx/: .gitignore  CMakeLists.txt  package.xml
yoloddx/config/: params.yaml  paramsLaser.yaml
yoloddx/launch/: detection3d_hsv.launch.py  setupYololaunch.py  yoloDetectionlaunch.py  yoloNodelaunch.py  yolov8.launch.py
yoloddx/models/: README.md
