<?xml version="1.0"?>
<package format="3">
  <name>proyecto</name>
  <version>0.0.0</version>
  <description>Example for communications with services actions</description>
  <maintainer email="m.antolinez.2023@alumnos.urjc.com">maarinaa2023</maintainer>
  <license>Apache License, Version 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>rclcpp_action</depend>
  <depend>opencv</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
